# AMIner

./: .gitignore  .gitmodules  CMakeLists.txt  TODO  aminer.info  base0.cmake  base1.cmake  base2.cmake  base3.cmake  changelog.txt  checkpoint.cmake  release.bat  tiles.cmake
_res/: aminer.gpl  aminer_editing.gpl  gate_eye_mask.bm  mode_icon_mask.bm  pak_order.txt  shop.xcf
_res/audio/: ore.sfs  ore2.sfs
_res/balance_tool/: index.html  rand.js  scripts.js  style.css
_res/balance_tool/scripts/: defs.js  dino_quest_state.js  ending.js  gate_quest_state.js  ground_layer.js  main.js  mineral_type.js  plan.js  plans.js  quest_state.js  rand.js  strike_state.js  tile.js  tile_index.js  tile_map.js  utils.js  vehicle.js
_res/commrade/: edges.bm
_res/copied/: game.json
_res/copied/sfx/: drill1.raw8  explosion.raw8  key_press_1.raw8  key_press_3.raw8  key_release_1.raw8  key_release_3.raw8  ore2.raw8  penalty.raw8  teleport.raw8
_res/copied/txt_en/: dossier_krystyna.txt  dossier_urzedas.txt  intro_challenge.txt  strings.json
_res/copied/txt_pl/: agent_dossier.txt  agent_epilogue.txt  agent_sci.txt  agent_welcome.txt  arch_accolade.txt  arch_gate_destroyed.txt  arch_gate_fail.txt  arch_gate_opened_dino_complete.txt  arch_gate_plea.txt  cryo_dossier.txt  cryo_tramiel.txt  dossier_krystyna.txt  dossier_urzedas.txt  intro.txt  intro_campaign.txt  intro_deadline.txt  komisarz_gate_opening.txt  komisarz_questioning_accolade.txt  komisarz_rebuke_1.txt  komisarz_rebuke_2.txt  komisarz_rebuke_3.txt  komisarz_rebuke_gate_destroyed.txt  komisarz_rebuke_questioning_gate.txt  komisarz_report_agent.txt  komisarz_report_gate.txt  komisarz_report_teleport.txt  komisarz_reported_agent.txt  komisarz_reported_crate.txt  komisarz_welcome.txt  mietek_first_plan.txt  mietek_intro_challenge.txt  mietek_protest_start.txt  mietek_protest_strike.txt  mietek_protest_warning.txt  mietek_welcome.txt  news_escape_agent.txt  news_escape_fail.txt  news_intro_3.txt  news_riots.txt  prisoner_gate_destroyed.txt  (+9 more)
_res/logo/: ace.gpl
_res/mockup/: gate fragments.xcf
_res/music/: coal-prelude.mod  czolowka.mod  dumka.mod  firefighter.mod  inzynier.mod  piesnoatari.mod  popescu.mod  roboczy.mod  tancjor1.mod  tancjordrugoj.mod  wintowka.mod  ymca-cover.mod  zima.mod
_res/palettes/: aminer main 32c A.pal  aminer main 32c B.pal  aminer main 32c C.pal  aminer main 32c D.pal  aminer main 32c.pal  aminer.gpl  lmc.gpl
_res/text/: messages_en.json  messages_pl.json
_res/text/txt_en/: agent_all_crates.txt  agent_dossier.txt  agent_epilogue.txt  agent_sci.txt  agent_welcome.txt  arch_accolade.txt  arch_dossier.txt  arch_gate_destroyed.txt  arch_gate_opened_dino_complete.txt  arch_gate_opened_dino_incomplete.txt  arch_gate_plea.txt  arch_plan_fail.txt  arch_welcome.txt  cryo_dossier.txt  cryo_tramiel.txt  jay_congrats.txt  jay_dossier.txt  komisarz_arch_accolade.txt  komisarz_dino_intro.txt  komisarz_gate_opening.txt  komisarz_questioning_accolade.txt  komisarz_rebuke_accounting.txt  komisarz_rebuke_bribe.txt  komisarz_rebuke_final.txt  komisarz_rebuke_gate_destroyed.txt  komisarz_rebuke_plan_1.txt  komisarz_rebuke_plan_2.txt  komisarz_rebuke_questioning_crate.txt  komisarz_rebuke_questioning_gate.txt  komisarz_rebuke_vehicle_destroyed.txt  komisarz_reported_agent.txt  komisarz_reported_crate.txt  komisarz_reported_gate.txt  komisarz_welcome.txt  krystyna_dossier.txt  krystyna_protest_warning.txt  mietek_capsule_found.txt  mietek_dossier.txt  mietek_first_plan.txt  mietek_intro_challenge.txt  (+33 more)
_res/text/txt_pl/: agent_all_crates.txt  agent_welcome.txt  arch_accolade.txt  arch_plan_fail.txt  arch_welcome.txt  cryo_success.txt  jay_dossier.txt  komisarz_dino_intro.txt  komisarz_dossier.txt  komisarz_gate_opening.txt  komisarz_questioning_accolade.txt  komisarz_rebuke_accounting.txt  komisarz_rebuke_plan_1.txt  komisarz_rebuke_questioning_crate.txt  komisarz_rebuke_questioning_gate.txt  komisarz_reported_agent.txt  (+25 more)
data/: aminer.plt  base0.bm  base1.bm  bomb_marker.bm  bomb_marker_mask.bm  bones.bm  bones_mask.bm  checkpoint.bm  comm_bg.bm  comm_buttons.bm  comm_faces.bm  comm_faces_office.bm  comm_office_selection.bm  drill.bm  drill_2.bm  drill_mask.bm  explosion.bm  explosion_mask.bm  game.json  hud.bm  intro.txt  jet.bm  jet_mask.bm  lang_select.bm  lmc.bm  lmc.plt  logo.bm  mode_cursor.bm  mode_cursor_mask.bm  mode_icons.bm  smoke.bm  smoke_mask.bm  strings_en.json  teleport.bm  teleport_mask.bm  tiles.bm  tool.bm  tool_2.bm  tool_mask.bm  track.bm  (+5 more)
data/sfx/: atari.raw8  key_press_0.raw8  key_press_2.raw8  key_release_0.raw8  key_release_2.raw8  menu_enter.raw8  menu_navigate.raw8  menu_toggle.raw8
data/txt_en/: strings.json
data/txt_pl/: intro.txt  strings.json
src/: achievement.c  achievement.h  aminer.c  aminer.h  assets.c  assets.h  background_bob.c  background_bob.h  base.c  base.h  base_teleporter.c  base_teleporter.h  base_tile.c  base_tile.h  base_unlocks.c  base_unlocks.h  blitter_mutex.c  blitter_mutex.h  bob_new.c  bob_new.h  bob_sequence.c  bob_sequence.h  build_ver.h  button.c  button.h  collectibles.c  collectibles.h  color.h  comm.c  comm.h  comm_msg.c  comm_msg.h  comm_shop.c  comm_shop.h  core.c  core.h  credits.c  credits.h  debug.c  debug.h  (+86 more)
src/comm/: base.c  base.h  button.c  button.h  comm.c  comm.h  gs_msg.c  gs_msg.h  gs_shop.c  gs_shop.h  inbox.c  inbox.h  page_accounting.c  page_accounting.h  page_bribe.c  page_bribe.h  page_comm_unlock.c  page_comm_unlock.h  page_escape.c  page_escape.h  page_favor.c  page_favor.h  page_gate_dilemma.c  page_gate_dilemma.h  page_list.c  page_list.h  page_market.c  page_market.h  page_msg.c  page_msg.h  page_news.c  page_news.h  page_office.c  page_office.h  page_portrait.c  page_portrait.h  page_questioning.c  page_questioning.h  page_sell_crates.c  page_sell_crates.h  (+8 more)
src/json/: json.c  json.h  utf8.h  utf8_remap.c  utf8_remap.h
src/mixer/: ace_mixer.c  ace_mixer.h
tools/: CMakeLists.txt
tools/src/: jsmn.h  json.c  json.h  lang_dom.c  lang_dom.h  string_array.c  string_array.h  strings_conv.cpp  utf8.h  utf8_remap.c  utf8_remap.h
